feat: carry platform-qualified JVM test settings onto their own Test task
`settings@<platform>.jvm.test.*` and `test-settings@<platform>.jvm.*` were
dropped: the binder never inspected a `test-settings@` section, and the
interpreter dropped one whole and read a `settings@` one for compiler options
alone.

Both now bind to the same two fields their unqualified forms bind to, so one
rule reads all four spellings. A `kmp/lib` has one `Test` task per JVM-backed
target, so a qualified setting rides on the target rather than on the module:
`TargetKind.Jvm` and `AndroidLibraryTarget` carry their own, and the renderer
addresses them by task name after the module-wide block, which is the order
Gradle applies the two configuration actions in.

The task names were read off a real build of the `kmp-android` baseline against
the pinned Kotlin 2.4.10 and AGP 9.0.0: `jvmTest`, and `testAndroidHostTest` for
the Android target's host tests. The Android Gradle Plugin registers its one too
late for `tasks.named` to find it while the script runs, so both are reached
through a lazy `withType<Test>().matching { }` instead.

`test-settings@<q>.jvm.release` stays unsupported and is now reported key by
key, which moves the `qualified-settings` baseline from one whole-section
message to the key it names.

Reporting a `test-settings@` section key by key exposed a walk that could reach
no key at all: `leafPaths` recursed into an empty object and returned nothing,
so `test-settings@jvm.jvm.release: {}` was reported before this change and
silent after it. An empty object now stands for itself, which is what the walk's
own KDoc already claimed. Found by an adversarial codex review of this commit.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>